fix(personal-project): Hotfix for horizontal scroll

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1299,7 +1299,6 @@ color: #A1B1BC
     background-color: #F5F7F8;
     border: 1px solid #EAEAEA;
     display: flex;
-    margin-left: 375px;
     padding: 0 22px 0 30px;
     border-radius: 5px;
     margin-bottom: 100px;
